--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     }
 
     .result {
+      background-color: green;
       margin-top: 1.5rem;
       font-size: 1.4rem;
       font-weight: bold;
